--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,4 +13,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Run a one-line script
-        run: echo {{ secrets.SUPER_SECRET_THING }}
+        run: echo ${{ secrets.SUPER_SECRET_THING }}
