--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,7 +2,7 @@ name: Simulate a releasy thing
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "evil-branch" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
