Git config stuff

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,5 +24,7 @@ jobs:
           echo $((version+1)) > version.txt
           echo "Written new version to file:"
           cat version.txt
+          git config --global user.email "you@example.com"
+          git config --global user.name "Your Name"
           git commit -am "Increment version"
           git push
