--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,7 +30,7 @@ jobs:
           git config --global user.name "Your Name"
           git checkout -b auto-release
           git commit -am "Increment version"
-          git push -u origin auto-release
+          git push -u origin auto-release --force
           gh pr create
           gh pr review --approve
           gh pr merge
