--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,4 +33,8 @@ jobs:
           git push -u origin auto-release --force
           gh pr create --fill
           gh pr review --approve
-          gh pr merge
+      - name: Approve PR as Sam
+        env:
+           GH_TOKEN: ${{ secrets.SAMS_GITHUB_TOKEN }}
+        run: |
+           gh pr merge
