--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Update version.txt
         env: 
-          GH_TOKEN: ${{ APP_TOKEN }}
+          GH_TOKEN: ${{ secrets.APP_TOKEN }}
         run: |
           version=$(cat version.txt)
           echo $((version+1)) > version.txt
