--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,15 +14,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Update version.txt
-        env: 
-          GH_TOKEN: ${{ secrets.APP_TOKEN }}
         run: |
           version=$(cat version.txt)
-          echo $((version+1)) > version.txt
-          echo "Written new version to file:"
-          cat version.txt
-          git config --global user.email "you@example.com"
-          git config --global user.name "Your Name"
-          git commit -am "Increment version"
-          git pull --ff-only
-          git push origin
+          curl -L \
+            -X PUT \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.APP_TOKEN }}"\
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/samblackburn/BranchProtectionTest/contents/version.txt \
+            -d '{"message":"Auto bump version","committer":{"name":"Monalisa Octocat","email":"octocat@github.com"},"content":"$((version+1))"}'
